styles.css
/* ... */
body{
    background-color: black;
    color: white;
}

.header{
    border-bottom: 1px solid;
}

.genLa{
    max-width: 1200px;
    margin: auto;
}

.toggle{
    display: none;
}

.navItems{
    margin-top: 2rem;
    display: flex;
    justify-content: space-between;
}

.navItems span{
    font-size: 1rem;
    text-transform: uppercase;
    font-size: 1.2rem;
    opacity: .7;
    font-family: "Bebas Neue", serif;
    font-weight: 400;
}

.navList>ul{
    display: flex;
    align-items: center;
    gap: 2rem;
    text-transform: capitalize;
    font-family: "Inter", serif;
    font-size: .9rem;
}

.navList ul li a{
    color: white;
    transition: .2s;
}

.navList ul li a:hover{
    color: #7aa7e9;
    font-size: 1rem;
}

.based- a{
   padding: 10px 20px;
    font-size: .9rem;
    background-color: #7aa7e9;
    border-radius: 25px;
    text-transform: uppercase;
    color: black;
    font-family: "Manrope", serif;
    font-weight: 900;
}
.based1 a{
   padding: 10px 20px;
    font-size: .9rem;
    background-color: #7aa7e9;
    border-radius: 25px;
    text-transform: uppercase;
    color: black;
    font-family: "Manrope", serif;
    font-weight: 900;
}
/* dropdown menu */
.toggle_btn{
    display: none;
}
.dropdown_menu{
    display: none;
    position: absolute;
    right: 2rem;
    top: 60px;
    height: 0;
    width: 300px;
    background: rgb(19, 23, 83);
    backdrop-filter: blur(100px);
    border-radius: 10px;
    overflow: hidden;
    transition: height 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
}

.dropdown_menu.open{
    height: 150px;
}

.dropdown_menu>li>a{
    font-family: "Manrope", serif;
    color: #fff;
}

.dropdown_menu>li>a:hover{
    color: #09a6ce;
    font-weight: 600;
    font-size: 18px;
}
.dropdown_menu > li{
    padding: 0.7rem;
    display: flex;
    align-items: center;
    justify-content: center;
}

.home{
    display: flex;
    align-items: center;
    padding-block: 3rem;
    justify-content: center;
    gap: 9rem;
    margin-bottom: 1rem;
}

.homeText{
    width: 59%;
}

.homeText h1{
    text-transform: uppercase;
    font-size: 3rem;
    line-height: 1;
    font-family: "Bebas Neue", serif;
    font-weight: 500;
    margin-bottom: 1rem;
}

.homeText p{
    text-transform: capitalize;
    opacity: .8;
    font-size: .8rem;
    font-family: "Manrope", serif;
    margin-bottom: 1rem;
}

.links{
    display: flex;
    align-items: center;
    gap: 1rem;
}

.based{
    display: flex;
    padding: 0px 8px;
    align-items: center;
    justify-self: center;
    background-color: #7aa7e9;
    height: 2rem;
    width: 8rem;
    border-radius: 25px;
    text-transform: uppercase;
    color: black;
    font-family: "Manrope", serif;
    font-weight: 900;
}

.based a{
    color: black;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 15px;
}

.based a i{
    font-size: .6rem;
    margin-left: .3rem;
}

.socail ul{
    display: flex;
    align-items: center;
    gap: 1rem;
}

.seek{
    font-size: 25px;
    background-color: #222222;
    height: 3rem;
    width: 3rem;
    border-radius: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}

.seek a{
    color: #7aa7e9;
}

.homeImage{
    width: 50%;
}

.homeImage img{
    width: 100%;
    border-radius: 20px;
}

.home div {
    opacity: 0; /* Start invisible */
    animation: home 1s ease-in forwards; /* Apply animation */
}

@keyframes home {
    from { opacity: 0; }
    to { opacity: 1; }
}


@media(max-width:1024px) {
    .navItems{
        padding: 0px 30px;
    }
    .home{
        padding: 50px 30px;
    }
    .socail ul li{
        font-size: 25px;
    }
}
@media(max-width:800px) {
    .home{
        gap: 3rem;
    }
    .homeText h1{
        font-size: 35px;
    }
    .navItems span{
        font-size: .9rem;
    }
    .seek{
        font-size: 18px;
        background-color: #222222;
        display: flex;
        justify-content: center;
        height: 30px;
        width: 30px;
    }
    .based a{
        padding: 0px 4px;
        font-size: 13px;
    }
    .based a i{
        font-size: .6rem;
    }
    .based- a{
        font-size: .7rem;
     }
     .navList ul li a{
        font-size: 12px;
    }
    .navList ul li a:hover{
        font-size: .9rem;
    }
    
}
@media(max-width:500px) {
    .home{
        flex-direction: column;
    }
    .homeText{
        width: 100%;
        text-align: center;
    }
    .homeText h1{
        font-size: 35px;
    }
    .navList{
        display: none;
    }
    .based-{
        display: none;
    }
    .toggle_btn{
        display: block;
    }
    .dropdown_menu{
        display: block;
    }
    .links{
        justify-content: center;
    }
    .homeImage{
        display: none;
    }
    .navItems span{
        font-size: .9rem;
    }
    .seek{
        font-size: 18px;
        background-color: #222222;
        display: flex;
        justify-content: center;
        height: 30px;
        width: 30px;
    }
    .based a{
        padding: 0px 4px;
        font-size: 13px;
    }
    .based a i{
        font-size: .6rem;
    }
    .based- a{
        font-size: .7rem;
     }
     .navList ul li a{
        font-size: 12px;
    }
    .navList ul li a:hover{
        font-size: .9rem;
    }
    
}

#work{
    border-bottom: 1px solid;
}

.projects{
    margin-block: 3rem;
    font-family: "Manrope", serif;
}
.app,.app0,.app1,.app2,.app3,.app4,.app5,.app6,.app7,.app8,.app9,.app10,.app11 {
    opacity: 0;
    transform: translateY(20px);
    transition: opacity 4s ease, transform 0.6s ease;
}
.show {
    opacity: 1;
    transform: translateY(0);
}

.feature{
    width: 36%;
}

.feature h1{
    font-family: "Bebas Neue", serif;
    font-weight: 400;
    font-size: 3rem;
}

.feature p{
    font-size: .8rem;
    font-family: "Manrope", serif;
}

.work{
    display: flex;
    gap: 3rem;
    margin-block: 3rem;
    align-items: center;
    margin-bottom: 5rem;
    justify-content: space-between;
}
/* ... */

